--- a/travel/denmark.html
+++ b/travel/denmark.html
@@ -56,7 +56,7 @@
               <div class='wolf-media portfolio-media'> 
                 <a class='img-hover' data-rel='lightcase:myCollection' href='https://d1snbyjv506jvs.cloudfront.net/denmark/IMG_0144-v2.jpg' title='Found this in a cafe. We have this same sign in our kitchen.'>
                 <img alt='Denmark' src='files/uploads/fingers-crossed.svg' data-src='https://d1snbyjv506jvs.cloudfront.net/denmark/IMG_0144-v2.jpg'></a>
-                <p>Found this in a cafe. We have this same sign in our kitchen.</p>
+                <p class="custom-caption">Found this in a cafe. We have this same sign in our kitchen.</p>
               </div> 
             </div> 
           </div> 
@@ -75,7 +75,7 @@
               <div class='wolf-media portfolio-media'> 
                 <a class='img-hover' data-rel='lightcase:myCollection' href='https://d1snbyjv506jvs.cloudfront.net/denmark/IMG_6756-v2.jpg' title='We literally got on the wrong train and accidentally went to Sweden.'> 
                 <img alt='Denmark' src='files/uploads/fingers-crossed.svg' data-src='https://d1snbyjv506jvs.cloudfront.net/denmark/IMG_6756-v2.jpg'></a> 
-                <p>We literally got on the wrong train and accidentally went to Sweden.</p>
+                <p class="custom-caption">We literally got on the wrong train and accidentally went to Sweden.</p>
               </div> 
             </div> 
           </div> 
@@ -85,7 +85,7 @@
               <div class='wolf-media portfolio-media'> 
                 <a class='img-hover' data-rel='lightcase:myCollection' href='https://d1snbyjv506jvs.cloudfront.net/denmark/IMG_6771-v2.jpg' title='Flea market print.'> 
                 <img alt='Denmark' src='files/uploads/fingers-crossed.svg' data-src='https://d1snbyjv506jvs.cloudfront.net/denmark/IMG_6771-v2.jpg'></a> 
-                <p>Flea market print.</p>
+                <p class="custom-caption">Flea market print.</p>
               </div> 
             </div> 
           </div> 
@@ -176,7 +176,7 @@
               <div class='wolf-media portfolio-media'> 
                 <a class='img-hover' data-rel='lightcase:myCollection' href='https://d1snbyjv506jvs.cloudfront.net/denmark/IMG_6856-v2.jpg' title='Pre-dinner sketch at BRUS.'> 
                 <img alt='Denmark' src='files/uploads/fingers-crossed.svg' data-src='https://d1snbyjv506jvs.cloudfront.net/denmark/IMG_6856-v2.jpg'></a> 
-                <p>Pre-dinner sketch at BRUS.</p>
+                <p class="custom-caption">Pre-dinner sketch at BRUS.</p>
               </div> 
             </div> 
           </div> 
@@ -204,7 +204,7 @@
               <div class='wolf-media portfolio-media'> 
                 <a class='img-hover' data-rel='lightcase:myCollection' href='https://d1snbyjv506jvs.cloudfront.net/denmark/IMG_6866-v2.jpg' title='Niels Bohr was a Danish physicist and Nobel Laureate who made foundational contributions to our understanding of atomic structure and quantum theory.'> 
                 <img alt='Denmark' src='files/uploads/fingers-crossed.svg' data-src='https://d1snbyjv506jvs.cloudfront.net/denmark/IMG_6866-v2.jpg'></a> 
-                <p>Niels Bohr was a Danish physicist and Nobel Laureate who made foundational contributions to our understanding of atomic structure and quantum theory.</p>
+                <p class="custom-caption">Niels Bohr was a Danish physicist and Nobel Laureate who made foundational contributions to our understanding of atomic structure and quantum theory.</p>
               </div> 
             </div> 
           </div> 
@@ -259,7 +259,7 @@
               <div class='wolf-media portfolio-media'> 
                 <a class='img-hover' data-rel='lightcase:myCollection' href='https://d1snbyjv506jvs.cloudfront.net/denmark/IMG_6911-v2.jpg' title='William Kentridge at the Louisiana Museum of Modern Art.'> 
                 <img alt='Denmark' src='files/uploads/fingers-crossed.svg' data-src='https://d1snbyjv506jvs.cloudfront.net/denmark/IMG_6911-v2.jpg'></a> 
-                <p>William Kentridge at the Louisiana Museum of Modern Art.</p>
+                <p class="custom-caption">William Kentridge at the Louisiana Museum of Modern Art.</p>
               </div> 
             </div> 
           </div> 
