--- a/travel/index.html
+++ b/travel/index.html
@@ -39,7 +39,7 @@
   <div id="page-content">
 
     <!-- HERO  -->
-    <section class="hero-full parallax-section text-light" data-parallax-image="https://d1snbyjv506jvs.cloudfront.net/norway/IMG_7423.jpg" id="hero">
+    <section class="hero-full parallax-section text-light" data-parallax-image="https://d1snbyjv506jvs.cloudfront.net/norway/IMG_7423-v2.jpg" id="hero">
       <div class="page-title">
         <h1 class="text-pop">My <span class="enlarge-1">Favorite</span> Part Was <span class="enlarge-2">Everything</span></h1>
         <h3 class="alttitle">A Travel Chronicle by Chris Heuberger</h3>
@@ -68,7 +68,7 @@
           <div class="wolf-item portfolio-wolf-item branding">
             <div class="wolf-item-inner">
               <div class="wolf-media portfolio-media">
-                <a class="wolf-media-link" href="portland-summer-2016.html"><img alt="Portland Summer 2016" src="https://d1snbyjv506jvs.cloudfront.net/portland-summer-2016/IMG_4671.jpg"></a>
+                <a class="wolf-media-link" href="portland-summer-2016.html"><img alt="Portland Summer 2016" src="https://d1snbyjv506jvs.cloudfront.net/portland-summer-2016/IMG_4671-v2.jpg"></a>
               </div>
               <div class="wolf-caption cbottom portfolio-caption" style="margin-right: 8%">
                 <a class="wolf-caption-link" href="portland-summer-2016.html">
@@ -81,7 +81,7 @@
           <div class="wolf-item portfolio-wolf-item branding">
             <div class="wolf-item-inner">
               <div class="wolf-media portfolio-media">
-                <a class="wolf-media-link" href="new-orleans.html"><img alt="New Orleans" src="https://d1snbyjv506jvs.cloudfront.net/new-orleans/IMG_5039.jpg"></a>
+                <a class="wolf-media-link" href="new-orleans.html"><img alt="New Orleans" src="https://d1snbyjv506jvs.cloudfront.net/new-orleans/IMG_5039-v2.jpg"></a>
               </div>
               <div class="wolf-caption cbottom portfolio-caption" style="margin-right: 8%">
                 <a class="wolf-caption-link" href="new-orleans.html">
@@ -94,7 +94,7 @@
           <div class="wolf-item portfolio-wolf-item photography">
             <div class="wolf-item-inner">
               <div class="wolf-media portfolio-media">
-                <a class="wolf-media-link" href="santa-fe.html"><img alt="Santa Fe" src="https://d1snbyjv506jvs.cloudfront.net/santa-fe/IMG_5582.jpg"></a>
+                <a class="wolf-media-link" href="santa-fe.html"><img alt="Santa Fe" src="https://d1snbyjv506jvs.cloudfront.net/santa-fe/IMG_5582-v2.jpg"></a>
               </div>
               <div class="wolf-caption portfolio-caption" style="margin-bottom:20%;">
                 <a class="wolf-caption-link" href="santa-fe.html">
@@ -107,7 +107,7 @@
           <div class="wolf-item portfolio-wolf-item photography">
             <div class="wolf-item-inner">
               <div class="wolf-media portfolio-media">
-                <a class="wolf-media-link" href="portland-winter-2016.html"><img alt="Portland Winter 2016" src="https://d1snbyjv506jvs.cloudfront.net/portland-winter-2016/IMG_6176.jpg"></a>
+                <a class="wolf-media-link" href="portland-winter-2016.html"><img alt="Portland Winter 2016" src="https://d1snbyjv506jvs.cloudfront.net/portland-winter-2016/IMG_6176-v2.jpg"></a>
               </div>
               <div class="wolf-caption portfolio-caption" style="margin-top:10%;">
                 <a class="wolf-caption-link" href="portland-winter-2016.html">
@@ -120,7 +120,7 @@
           <div class="wolf-item portfolio-wolf-item print">
             <div class="wolf-item-inner">
               <div class="wolf-media portfolio-media">
-                <a class="wolf-media-link" href="scandinavia.html"><img alt="Scandinavia" src="https://d1snbyjv506jvs.cloudfront.net/norway/IMG_0286.jpg"></a>
+                <a class="wolf-media-link" href="scandinavia.html"><img alt="Scandinavia" src="https://d1snbyjv506jvs.cloudfront.net/norway/IMG_0286-v2.jpg"></a>
               </div>
               <div class="wolf-caption portfolio-caption">
                 <a class="wolf-caption-link" href="scandinavia.html">
