--- a/travel/new-orleans.html
+++ b/travel/new-orleans.html
@@ -83,7 +83,7 @@
                 <div class='wolf-media portfolio-media'> 
                   <a class='img-hover' data-rel='lightcase:myCollection' href='https://d1snbyjv506jvs.cloudfront.net/new-orleans/IMG_5061-v2.jpg' title='Sazerac Bar at the Roosevelt Hotel.'> 
                   <img alt='New Orleans' src='files/uploads/fingers-crossed.svg' data-src='https://d1snbyjv506jvs.cloudfront.net/new-orleans/IMG_5061-v2.jpg'></a> 
-                  <p>Sazerac Bar at the Roosevelt Hotel.</p>
+                  <p class="custom-caption">Sazerac Bar at the Roosevelt Hotel.</p>
                 </div> 
               </div> 
             </div> 
@@ -93,7 +93,7 @@
                 <div class='wolf-media portfolio-media'> 
                   <a class='img-hover' data-rel='lightcase:myCollection' href='https://d1snbyjv506jvs.cloudfront.net/new-orleans/IMG_5028-v2.jpg' title="Get a Pimm's Cup."> 
                   <img alt='New Orleans' src='files/uploads/fingers-crossed.svg' data-src='https://d1snbyjv506jvs.cloudfront.net/new-orleans/IMG_5028-v2.jpg'></a> 
-                  <p>Get a Pimm's Cup.</p>
+                  <p class="custom-caption">Get a Pimm's Cup.</p>
                 </div> 
               </div> 
             </div> 
@@ -130,7 +130,7 @@
                 <div class='wolf-media portfolio-media'> 
                   <a class='img-hover' data-rel='lightcase:myCollection' href='https://d1snbyjv506jvs.cloudfront.net/new-orleans/IMG_5067-v2.jpg' title='Sunrise run to City Park.'> 
                   <img alt='New Orleans' src='files/uploads/fingers-crossed.svg' data-src='https://d1snbyjv506jvs.cloudfront.net/new-orleans/IMG_5067-v2.jpg'></a> 
-                  <p>Sunrise run to City Park.</p>
+                  <p class="custom-caption">Sunrise run to City Park.</p>
                 </div> 
               </div> 
             </div>
@@ -158,7 +158,7 @@
                 <div class='wolf-media portfolio-media'> 
                   <a class='img-hover' data-rel='lightcase:myCollection' href='https://d1snbyjv506jvs.cloudfront.net/new-orleans/IMG_5071-v2.jpg' title='The Singing Oak'> 
                   <img alt='New Orleans' src='files/uploads/fingers-crossed.svg' data-src='https://d1snbyjv506jvs.cloudfront.net/new-orleans/IMG_5071-v2.jpg'></a> 
-                  <p>The Singing Oak</p>
+                  <p class="custom-caption">The Singing Oak</p>
                 </div> 
               </div> 
             </div> 
@@ -168,7 +168,7 @@
                 <div class='wolf-media portfolio-media'> 
                   <a class='img-hover' data-rel='lightcase:myCollection' href='https://d1snbyjv506jvs.cloudfront.net/new-orleans/IMG_5083-v2.jpg' title="Dress-up brunch at Commander's Palace. I had boudin, gulf fish, and a gentilly flower, I do declare."> 
                   <img alt='New Orleans' src='files/uploads/fingers-crossed.svg' data-src='https://d1snbyjv506jvs.cloudfront.net/new-orleans/IMG_5083-v2.jpg'></a> 
-                  <p>Dress-up brunch at Commander's Palace. I had boudin, gulf fish, and a gentilly flower, I do declare.</p>
+                  <p class="custom-caption">Dress-up brunch at Commander's Palace. I had boudin, gulf fish, and a gentilly flower, I do declare.</p>
                 </div> 
               </div> 
             </div> 
@@ -178,7 +178,7 @@
                 <div class='wolf-media portfolio-media'> 
                   <a class='img-hover' data-rel='lightcase:myCollection' href='https://d1snbyjv506jvs.cloudfront.net/new-orleans/IMG_5087-v2.jpg' title='Lafayette Cemetery'> 
                   <img alt='New Orleans' src='files/uploads/fingers-crossed.svg' data-src='https://d1snbyjv506jvs.cloudfront.net/new-orleans/IMG_5087-v2.jpg'></a> 
-                  <p>Lafayette Cemetery</p>
+                  <p class="custom-caption">Lafayette Cemetery</p>
                 </div> 
               </div> 
             </div> 
@@ -197,7 +197,7 @@
                 <div class='wolf-media portfolio-media'> 
                   <a class='img-hover' data-rel='lightcase:myCollection' href='https://d1snbyjv506jvs.cloudfront.net/new-orleans/IMG_5112-v2.jpg' title='The beignets are good. The frozen café au laiter are outstanding.'> 
                   <img alt='New Orleans' src='files/uploads/fingers-crossed.svg' data-src='https://d1snbyjv506jvs.cloudfront.net/new-orleans/IMG_5112-v2.jpg'></a> 
-                  <p>The beignets are good. The frozen café au laiter are outstanding.</p>
+                  <p class="custom-caption">The beignets are good. The frozen café au laiter are outstanding.</p>
                 </div> 
               </div> 
             </div> 
@@ -216,7 +216,7 @@
                 <div class='wolf-media portfolio-media'> 
                   <a class='img-hover' data-rel='lightcase:myCollection' href='https://d1snbyjv506jvs.cloudfront.net/new-orleans/IMG_5121-v2.jpg' title='Home of the Carousel Bar.'> 
                   <img alt='New Orleans' src='files/uploads/fingers-crossed.svg' data-src='https://d1snbyjv506jvs.cloudfront.net/new-orleans/IMG_5121-v2.jpg'></a> 
-                  <p>Home of the Carousel Bar.</p>
+                  <p class="custom-caption">Home of the Carousel Bar.</p>
                 </div> 
               </div> 
             </div> 
@@ -235,7 +235,7 @@
                 <div class='wolf-media portfolio-media'> 
                   <a class='img-hover' data-rel='lightcase:myCollection' href='https://d1snbyjv506jvs.cloudfront.net/new-orleans/IMG_5080-v2.jpg' title='Trolley ride yall.'> 
                   <img alt='New Orleans' src='files/uploads/fingers-crossed.svg' data-src='https://d1snbyjv506jvs.cloudfront.net/new-orleans/IMG_5080-v2.jpg'></a> 
-                  <p>Trolley ride yall.</p>
+                  <p class="custom-caption">Trolley ride yall.</p>
                 </div> 
               </div> 
             </div> 
@@ -299,7 +299,7 @@
                 <div class='wolf-media portfolio-media'> 
                   <a class='img-hover' data-rel='lightcase:myCollection' href='https://d1snbyjv506jvs.cloudfront.net/new-orleans/IMG_5143-v2.jpg' title='Louis Armstrong Park in the Tremé. A plaque worth reading.'> 
                   <img alt='New Orleans' src='files/uploads/fingers-crossed.svg' data-src='https://d1snbyjv506jvs.cloudfront.net/new-orleans/IMG_5143-v2.jpg'></a> 
-                  <p>Louis Armstrong Park in the Tremé. A plaque worth reading.</p>
+                  <p class="custom-caption">Louis Armstrong Park in the Tremé. A plaque worth reading.</p>
                 </div> 
               </div> 
             </div> 
@@ -309,7 +309,7 @@
                 <div class='wolf-media portfolio-media'> 
                   <a class='img-hover' data-rel='lightcase:myCollection' href='https://d1snbyjv506jvs.cloudfront.net/new-orleans/signage-grid.jpg' title='Typography of New Orleans'> 
                   <img alt='New Orleans' src='files/uploads/fingers-crossed.svg' data-src='https://d1snbyjv506jvs.cloudfront.net/new-orleans/signage-grid.jpg'></a> 
-                  <p>Typography of New Orleans</p>
+                  <p class="custom-caption">Typography of New Orleans</p>
                 </div> 
               </div> 
             </div>
