--- a/travel/norway.html
+++ b/travel/norway.html
@@ -74,7 +74,7 @@
               <div class='wolf-media portfolio-media'> 
                 <a class='img-hover' data-rel='lightcase:myCollection' href='https://d1snbyjv506jvs.cloudfront.net/norway/IMG_0279-v2.jpg' title='Brekkenipa hike'> 
                 <img alt='Norway' src='files/uploads/fingers-crossed.svg' data-src='https://d1snbyjv506jvs.cloudfront.net/norway/IMG_0279-v2.jpg'></a> 
-                <p>Brekkenipa hike</p>
+                <p class="custom-caption">Brekkenipa hike</p>
               </div> 
             </div> 
           </div> 
@@ -84,7 +84,7 @@
               <div class='wolf-media portfolio-media'> 
                 <a class='img-hover' data-rel='lightcase:myCollection' href='https://d1snbyjv506jvs.cloudfront.net/norway/IMG_0232-v2.jpg' title='Stalheimfossen waterfall hike.'> 
                 <img alt='Norway' src='files/uploads/fingers-crossed.svg' data-src='https://d1snbyjv506jvs.cloudfront.net/norway/IMG_0232-v2.jpg'></a> 
-                <p>Stalheimfossen waterfall hike.</p>
+                <p class="custom-caption">Stalheimfossen waterfall hike.</p>
               </div> 
             </div> 
           </div> 
@@ -94,7 +94,7 @@
               <div class='wolf-media portfolio-media'> 
                 <a class='img-hover' data-rel='lightcase:myCollection' href='https://d1snbyjv506jvs.cloudfront.net/norway/IMG_0249-v2.jpg' title='Nali hike'> 
                 <img alt='Norway' src='files/uploads/fingers-crossed.svg' data-src='https://d1snbyjv506jvs.cloudfront.net/norway/IMG_0249-v2.jpg'></a> 
-                <p>Nali hike</p>
+                <p class="custom-caption">Nali hike</p>
               </div> 
             </div> 
           </div> 
@@ -122,7 +122,7 @@
               <div class='wolf-media portfolio-media'> 
                 <a class='img-hover' data-rel='lightcase:myCollection' href='https://d1snbyjv506jvs.cloudfront.net/norway/IMG_0290-v2.jpg' title='Stalheim Hotel'> 
                 <img alt='Norway' src='files/uploads/fingers-crossed.svg' data-src='https://d1snbyjv506jvs.cloudfront.net/norway/IMG_0290-v2.jpg'></a> 
-                <p>Stalheim Hotel</p>
+                <p class="custom-caption">Stalheim Hotel</p>
               </div> 
             </div> 
           </div> 
@@ -132,7 +132,7 @@
               <div class='wolf-media portfolio-media'> 
                 <a class='img-hover' data-rel='lightcase:myCollection' href='https://d1snbyjv506jvs.cloudfront.net/norway/IMG_0292-v2.jpg' title='Actually ranked one of the best hotel room views in the world.'> 
                 <img alt='Norway' src='files/uploads/fingers-crossed.svg' data-src='https://d1snbyjv506jvs.cloudfront.net/norway/IMG_0292-v2.jpg'></a> 
-                <p>Actually ranked one of the best hotel room views in the world.</p>
+                <p class="custom-caption">Actually ranked one of the best hotel room views in the world.</p>
               </div> 
             </div> 
           </div> 
@@ -142,7 +142,7 @@
               <div class='wolf-media portfolio-media'> 
                 <a class='img-hover' data-rel='lightcase:myCollection' href='https://d1snbyjv506jvs.cloudfront.net/norway/IMG_0323-v2.jpg' title='The Viking Ship Museum. This one was built around 820 AD.'> 
                 <img alt='Norway' src='files/uploads/fingers-crossed.svg' data-src='https://d1snbyjv506jvs.cloudfront.net/norway/IMG_0323-v2.jpg'></a> 
-                <p>The Viking Ship Museum. This one was built around 820 AD.</p>
+                <p class="custom-caption">The Viking Ship Museum. This one was built around 820 AD.</p>
               </div> 
             </div> 
           </div>
@@ -170,7 +170,7 @@
               <div class='wolf-media portfolio-media'> 
                 <a class='img-hover' data-rel='lightcase:myCollection' href='https://d1snbyjv506jvs.cloudfront.net/norway/IMG_7239-v2.jpg' title='Bergen'> 
                 <img alt='Norway' src='files/uploads/fingers-crossed.svg' data-src='https://d1snbyjv506jvs.cloudfront.net/norway/IMG_7239-v2.jpg'></a> 
-                <p>Bergen</p>
+                <p class="custom-caption">Bergen</p>
               </div> 
             </div> 
           </div> 
@@ -189,7 +189,7 @@
               <div class='wolf-media portfolio-media'> 
                 <a class='img-hover' data-rel='lightcase:myCollection' href='https://d1snbyjv506jvs.cloudfront.net/norway/IMG_7273-v2.jpg' title='Svartediket Reservoir'> 
                 <img alt='Norway' src='files/uploads/fingers-crossed.svg' data-src='https://d1snbyjv506jvs.cloudfront.net/norway/IMG_7273-v2.jpg'></a> 
-                <p>Svartediket Reservoir</p>
+                <p class="custom-caption">Svartediket Reservoir</p>
               </div> 
             </div> 
           </div> 
@@ -208,7 +208,7 @@
               <div class='wolf-media portfolio-media'> 
                 <a class='img-hover' data-rel='lightcase:myCollection' href='https://d1snbyjv506jvs.cloudfront.net/norway/IMG_7290-v2.jpg' title='Our favorite restaurant in Bergen.'> 
                 <img alt='Norway' src='files/uploads/fingers-crossed.svg' data-src='https://d1snbyjv506jvs.cloudfront.net/norway/IMG_7290-v2.jpg'></a> 
-                <p>Our favorite restaurant in Bergen.</p>
+                <p class="custom-caption">Our favorite restaurant in Bergen.</p>
               </div> 
             </div> 
           </div> 
@@ -227,7 +227,7 @@
               <div class='wolf-media portfolio-media'> 
                 <a class='img-hover' data-rel='lightcase:myCollection' href='https://d1snbyjv506jvs.cloudfront.net/norway/IMG_7299-v2.jpg' title='Run and ye shall know the city.'> 
                 <img alt='Norway' src='files/uploads/fingers-crossed.svg' data-src='https://d1snbyjv506jvs.cloudfront.net/norway/IMG_7299-v2.jpg'></a> 
-                <p>Run and ye shall know the city.</p>
+                <p class="custom-caption">Run and ye shall know the city.</p>
               </div> 
             </div> 
           </div> 
@@ -237,7 +237,7 @@
               <div class='wolf-media portfolio-media'> 
                 <a class='img-hover' data-rel='lightcase:myCollection' href='https://d1snbyjv506jvs.cloudfront.net/norway/IMG_7306-v2.jpg' title='Scandinavian cities have a plethora of amazing statues.'> 
                 <img alt='Norway' src='files/uploads/fingers-crossed.svg' data-src='https://d1snbyjv506jvs.cloudfront.net/norway/IMG_7306-v2.jpg'></a> 
-                <p>Scandinavian cities have a plethora of amazing statues.</p>
+                <p class="custom-caption">Scandinavian cities have a plethora of amazing statues.</p>
               </div> 
             </div> 
           </div> 
@@ -265,7 +265,7 @@
               <div class='wolf-media portfolio-media'> 
                 <a class='img-hover' data-rel='lightcase:myCollection' href='https://d1snbyjv506jvs.cloudfront.net/norway/IMG_7348-v2.jpg' title='Stoltzekleiven hike to Sandviksfjellet.'> 
                 <img alt='Norway' src='files/uploads/fingers-crossed.svg' data-src='https://d1snbyjv506jvs.cloudfront.net/norway/IMG_7348-v2.jpg'></a> 
-                <p>Stoltzekleiven hike to Sandviksfjellet.</p>
+                <p class="custom-caption">Stoltzekleiven hike to Sandviksfjellet.</p>
               </div> 
             </div> 
           </div> 
@@ -275,7 +275,7 @@
               <div class='wolf-media portfolio-media'> 
                 <a class='img-hover' data-rel='lightcase:myCollection' href='https://d1snbyjv506jvs.cloudfront.net/norway/IMG_7354-v2.jpg' title='A viking village.'> 
                 <img alt='Norway' src='files/uploads/fingers-crossed.svg' data-src='https://d1snbyjv506jvs.cloudfront.net/norway/IMG_7354-v2.jpg'></a> 
-                <p>A viking village.</p>
+                <p class="custom-caption">A viking village.</p>
               </div> 
             </div> 
           </div> 
@@ -294,7 +294,7 @@
               <div class='wolf-media portfolio-media'> 
                 <a class='img-hover' data-rel='lightcase:myCollection' href='https://d1snbyjv506jvs.cloudfront.net/norway/IMG_7383-v2.jpg' title='Post-hike Fläm beer on a mountain in Stalheim.'> 
                 <img alt='Norway' src='files/uploads/fingers-crossed.svg' data-src='https://d1snbyjv506jvs.cloudfront.net/norway/IMG_7383-v2.jpg'></a>
-                <p>Post-hike Fläm beer on a mountain in Stalheim.</p> 
+                <p class="custom-caption">Post-hike Fläm beer on a mountain in Stalheim.</p> 
               </div> 
             </div> 
           </div> 
@@ -304,7 +304,7 @@
               <div class='wolf-media portfolio-media'> 
                 <a class='img-hover' data-rel='lightcase:myCollection' href='https://d1snbyjv506jvs.cloudfront.net/norway/IMG_7384-v2.jpg' title='Possibly the most beautiful place in the world.'> 
                 <img alt='Norway' src='files/uploads/fingers-crossed.svg' data-src='https://d1snbyjv506jvs.cloudfront.net/norway/IMG_7384-v2.jpg'></a> 
-                <p>Possibly the most beautiful place in the world.</p>
+                <p class="custom-caption">Possibly the most beautiful place in the world.</p>
               </div> 
             </div> 
           </div> 
@@ -368,7 +368,7 @@
               <div class='wolf-media portfolio-media'> 
                 <a class='img-hover' data-rel='lightcase:myCollection' href='https://d1snbyjv506jvs.cloudfront.net/norway/IMG_7488-v2.jpg' title="The Three Graces Listening to Cupid's Song by Bertel Thorvaldsen (1836) at the Nasjonalmuseet."> 
                 <img alt='Norway' src='files/uploads/fingers-crossed.svg' data-src='https://d1snbyjv506jvs.cloudfront.net/norway/IMG_7488-v2.jpg'></a> 
-                <p>The Three Graces Listening to Cupid's Song by Bertel Thorvaldsen (1836) at the Nasjonalmuseet.</p>
+                <p class="custom-caption">The Three Graces Listening to Cupid's Song by Bertel Thorvaldsen (1836) at the Nasjonalmuseet.</p>
               </div> 
             </div> 
           </div> 
@@ -396,7 +396,7 @@
               <div class='wolf-media portfolio-media'> 
                 <a class='img-hover' data-rel='lightcase:myCollection' href='https://d1snbyjv506jvs.cloudfront.net/norway/IMG_7500-v2.jpg' title='Vigeland Sculpture Park'> 
                 <img alt='Norway' src='files/uploads/fingers-crossed.svg' data-src='https://d1snbyjv506jvs.cloudfront.net/norway/IMG_7500-v2.jpg'></a> 
-                <p>Vigeland Sculpture Park</p>
+                <p class="custom-caption">Vigeland Sculpture Park</p>
               </div> 
             </div> 
           </div> 
@@ -415,7 +415,7 @@
               <div class='wolf-media portfolio-media'> 
                 <a class='img-hover' data-rel='lightcase:myCollection' href='https://d1snbyjv506jvs.cloudfront.net/norway/IMG_7524-v2.jpg' title='Oslo Opera House'> 
                 <img alt='Norway' src='files/uploads/fingers-crossed.svg' data-src='https://d1snbyjv506jvs.cloudfront.net/norway/IMG_7524-v2.jpg'></a> 
-                <p>Oslo Opera House</p>
+                <p class="custom-caption">Oslo Opera House</p>
               </div> 
             </div> 
           </div> 
@@ -425,7 +425,7 @@
               <div class='wolf-media portfolio-media'> 
                 <a class='img-hover' data-rel='lightcase:myCollection' href='https://d1snbyjv506jvs.cloudfront.net/norway/IMG_7537-v2.jpg' title='Twin Peaks beer at Fru Hagen.'> 
                 <img alt='Norway' src='files/uploads/fingers-crossed.svg' data-src='https://d1snbyjv506jvs.cloudfront.net/norway/IMG_7537-v2.jpg'></a> 
-                <p>Twin Peaks beer at Fru Hagen.</p>
+                <p class="custom-caption">Twin Peaks beer at Fru Hagen.</p>
               </div> 
             </div> 
           </div> 
@@ -471,7 +471,7 @@
               <div class='wolf-media portfolio-media'> 
                 <a class='img-hover' data-rel='lightcase:myCollection' href='https://d1snbyjv506jvs.cloudfront.net/norway/IMG_7609-v2.jpg' title='Viking ale bowl!'> 
                 <img alt='Norway' src='files/uploads/fingers-crossed.svg' data-src='https://d1snbyjv506jvs.cloudfront.net/norway/IMG_7609-v2.jpg'></a> 
-                <p>Viking ale bowl!</p>
+                <p class="custom-caption">Viking ale bowl!</p>
               </div> 
             </div> 
           </div> 
