--- a/travel/portland-summer-2016.html
+++ b/travel/portland-summer-2016.html
@@ -65,7 +65,7 @@
                 <div class='wolf-media portfolio-media'> 
                   <a class='img-hover' data-rel='lightcase:myCollection' href='https://d1snbyjv506jvs.cloudfront.net/portland-summer-2016/IMG_4647-v2.jpg' title='Session lager and golden retrievers.'> 
                   <img alt='Portland Summer 2016' src='files/uploads/fingers-crossed.svg' data-src='https://d1snbyjv506jvs.cloudfront.net/portland-summer-2016/IMG_4647-v2.jpg'></a> 
-                  <p>Session lager and golden retrievers.</p>
+                  <p class="custom-caption">Session lager and golden retrievers.</p>
                 </div> 
               </div> 
             </div> 
@@ -156,7 +156,7 @@
                 <div class='wolf-media portfolio-media'> 
                   <a class='img-hover' data-rel='lightcase:myCollection' href='https://d1snbyjv506jvs.cloudfront.net/portland-summer-2016/IMG_4679-v2.jpg' title='Spot the Jillian.'> 
                   <img alt='Portland Summer 2016' src='files/uploads/fingers-crossed.svg' data-src='https://d1snbyjv506jvs.cloudfront.net/portland-summer-2016/IMG_4679-v2.jpg'></a> 
-                  <p>Spot the Jillian.</p>
+                  <p class="custom-caption">Spot the Jillian.</p>
                 </div> 
               </div> 
             </div> 
@@ -220,7 +220,7 @@
                 <div class='wolf-media portfolio-media'> 
                   <a class='img-hover' data-rel='lightcase:myCollection' href='https://d1snbyjv506jvs.cloudfront.net/portland-summer-2016/IMG_4737-v2.jpg' title='So much glorious hiking.'> 
                   <img alt='Portland Summer 2016' src='files/uploads/fingers-crossed.svg' data-src='https://d1snbyjv506jvs.cloudfront.net/portland-summer-2016/IMG_4737-v2.jpg'></a> 
-                  <p>So much glorious hiking.</p>
+                  <p class="custom-caption">So much glorious hiking.</p>
                 </div> 
               </div> 
             </div>
@@ -284,7 +284,7 @@
                 <div class='wolf-media portfolio-media'> 
                   <a class='img-hover' data-rel='lightcase:myCollection' href='https://d1snbyjv506jvs.cloudfront.net/portland-summer-2016/IMG_4800-v2.jpg' title='Fresh berries from a roadside stand. Payment on the honor system.'> 
                   <img alt='Portland Summer 2016' src='files/uploads/fingers-crossed.svg' data-src='https://d1snbyjv506jvs.cloudfront.net/portland-summer-2016/IMG_4800-v2.jpg'></a> 
-                  <p>Fresh berries from a roadside stand. Payment on the honor system.</p>
+                  <p class="custom-caption">Fresh berries from a roadside stand. Payment on the honor system.</p>
                 </div> 
               </div> 
             </div> 
@@ -321,7 +321,7 @@
                 <div class='wolf-media portfolio-media'> 
                   <a class='img-hover' data-rel='lightcase:myCollection' href='https://d1snbyjv506jvs.cloudfront.net/portland-summer-2016/IMG_4813-v2.jpg' title='Slug!'> 
                   <img alt='Portland Summer 2016' src='files/uploads/fingers-crossed.svg' data-src='https://d1snbyjv506jvs.cloudfront.net/portland-summer-2016/IMG_4813-v2.jpg'></a> 
-                  <p>Slug!</p>
+                  <p class="custom-caption">Slug!</p>
                 </div> 
               </div> 
             </div> 
@@ -358,7 +358,7 @@
                 <div class='wolf-media portfolio-media'> 
                   <a class='img-hover' data-rel='lightcase:myCollection' href='https://d1snbyjv506jvs.cloudfront.net/portland-summer-2016/IMG_4961-v2.jpg' title='Black Butte'> 
                   <img alt='Portland Summer 2016' src='files/uploads/fingers-crossed.svg' data-src='https://d1snbyjv506jvs.cloudfront.net/portland-summer-2016/IMG_4961-v2.jpg'></a> 
-                  <p>Black Butte</p>
+                  <p class="custom-caption">Black Butte</p>
                 </div> 
               </div> 
             </div>
@@ -395,7 +395,7 @@
                 <div class='wolf-media portfolio-media'> 
                   <a class='img-hover' data-rel='lightcase:myCollection' href='https://d1snbyjv506jvs.cloudfront.net/portland-summer-2016/IMG_4941-v2.jpg' title='He may look cute but he will straight-up murder your family.'> 
                   <img alt='Portland Summer 2016' src='files/uploads/fingers-crossed.svg' data-src='https://d1snbyjv506jvs.cloudfront.net/portland-summer-2016/IMG_4941-v2.jpg'></a> 
-                  <p>He may look cute but he will straight-up murder your family.</p>
+                  <p class="custom-caption">He may look cute but he will straight-up murder your family.</p>
                 </div> 
               </div> 
             </div> 
@@ -450,7 +450,7 @@
                 <div class='wolf-media portfolio-media'> 
                   <a class='img-hover' data-rel='lightcase:myCollection' href='https://d1snbyjv506jvs.cloudfront.net/portland-summer-2016/IMG_4925-v2.jpg' title='McMenamins warm saltwater soaking pool. $5 to chill here with a beer in a lush outdoor atrium.'> 
                   <img alt='Portland Summer 2016' src='files/uploads/fingers-crossed.svg' data-src='https://d1snbyjv506jvs.cloudfront.net/portland-summer-2016/IMG_4925-v2.jpg'></a> 
-                  <p>McMenamins warm saltwater soaking pool. $5 to chill here with a beer in a lush outdoor atrium.</p>
+                  <p class="custom-caption">McMenamins warm saltwater soaking pool. $5 to chill here with a beer in a lush outdoor atrium.</p>
                 </div> 
               </div> 
             </div> 
