--- a/travel/portland-winter-2016.html
+++ b/travel/portland-winter-2016.html
@@ -56,7 +56,7 @@
               <div class='wolf-media portfolio-media'> 
                 <a class='img-hover' data-rel='lightcase:myCollection' href='https://d1snbyjv506jvs.cloudfront.net/portland-winter-2016/IMG_5900-v2.jpg' title='Sandy River Gorge Preserve'> 
                 <img alt='Portland Winter 2016' src='files/uploads/fingers-crossed.svg' data-src='https://d1snbyjv506jvs.cloudfront.net/portland-winter-2016/IMG_5900-v2.jpg'></a> 
-                <p>Sandy River Gorge Preserve</p>
+                <p class="custom-caption">Sandy River Gorge Preserve</p>
               </div> 
             </div> 
           </div> 
@@ -120,7 +120,7 @@
               <div class='wolf-media portfolio-media'> 
                 <a class='img-hover' data-rel='lightcase:myCollection' href='https://d1snbyjv506jvs.cloudfront.net/portland-winter-2016/IMG_5852-v2.jpg' title='Early Warhol at the Portland Museum of Art.'> 
                 <img alt='Portland Winter 2016' src='files/uploads/fingers-crossed.svg' data-src='https://d1snbyjv506jvs.cloudfront.net/portland-winter-2016/IMG_5852-v2.jpg'></a> 
-                <p>Early Warhol at the Portland Museum of Art.</p>
+                <p class="custom-caption">Early Warhol at the Portland Museum of Art.</p>
               </div> 
             </div> 
           </div> 
@@ -166,7 +166,7 @@
               <div class='wolf-media portfolio-media'> 
                 <a class='img-hover' data-rel='lightcase:myCollection' href='https://d1snbyjv506jvs.cloudfront.net/portland-winter-2016/IMG_5893-v2.jpg' title='Robert Gober'> 
                 <img alt='Portland Winter 2016' src='files/uploads/fingers-crossed.svg' data-src='https://d1snbyjv506jvs.cloudfront.net/portland-winter-2016/IMG_5893-v2.jpg'></a> 
-                <p>Robert Gober</p>
+                <p class="custom-caption">Robert Gober</p>
               </div> 
             </div> 
           </div>
@@ -203,7 +203,7 @@
               <div class='wolf-media portfolio-media'> 
                 <a class='img-hover' data-rel='lightcase:myCollection' href='https://d1snbyjv506jvs.cloudfront.net/portland-winter-2016/IMG_6029-v2.jpg' title="Angel's Rest"> 
                 <img alt='Portland Winter 2016' src='files/uploads/fingers-crossed.svg' data-src='https://d1snbyjv506jvs.cloudfront.net/portland-winter-2016/IMG_6029-v2.jpg'></a> 
-                <p>Angel's Rest</p>
+                <p class="custom-caption">Angel's Rest</p>
               </div> 
             </div> 
           </div> 
@@ -231,7 +231,7 @@
               <div class='wolf-media portfolio-media'> 
                 <a class='img-hover' data-rel='lightcase:myCollection' href='https://d1snbyjv506jvs.cloudfront.net/portland-winter-2016/IMG_6072-v2.jpg' title='The green state.'> 
                 <img alt='Portland Winter 2016' src='files/uploads/fingers-crossed.svg' data-src='https://d1snbyjv506jvs.cloudfront.net/portland-winter-2016/IMG_6072-v2.jpg'></a> 
-                <p>The green state.</p>
+                <p class="custom-caption">The green state.</p>
               </div> 
             </div> 
           </div> 
@@ -241,7 +241,7 @@
               <div class='wolf-media portfolio-media'> 
                 <a class='img-hover' data-rel='lightcase:myCollection' href='https://d1snbyjv506jvs.cloudfront.net/portland-winter-2016/IMG_6083-v2.jpg' title="I can't tell you why but I love this sign."> 
                 <img alt='Portland Winter 2016' src='files/uploads/fingers-crossed.svg' data-src='https://d1snbyjv506jvs.cloudfront.net/portland-winter-2016/IMG_6083-v2.jpg'></a> 
-                <p>I can't tell you why but I love this sign.</p>
+                <p class="custom-caption">I can't tell you why but I love this sign.</p>
               </div> 
             </div> 
           </div> 
@@ -260,7 +260,7 @@
               <div class='wolf-media portfolio-media'> 
                 <a class='img-hover' data-rel='lightcase:myCollection' href='https://d1snbyjv506jvs.cloudfront.net/portland-winter-2016/IMG_6119-v2.jpg' title='Turkish café in a double-decker bus.'> 
                 <img alt='Portland Winter 2016' src='files/uploads/fingers-crossed.svg' data-src='https://d1snbyjv506jvs.cloudfront.net/portland-winter-2016/IMG_6119-v2.jpg'></a> 
-                <p>Turkish café in a double-decker bus.</p>
+                <p class="custom-caption">Turkish café in a double-decker bus.</p>
               </div> 
             </div> 
           </div> 
@@ -287,7 +287,7 @@
             <div class='wolf-item-inner'> 
               <div class='wolf-media portfolio-media'> 
                 <a class='img-hover' data-rel='lightcase:myCollection' href='https://d1snbyjv506jvs.cloudfront.net/portland-winter-2016/IMG_6176-v2.jpg' title='Oneonta Trail to Triple Falls.'><img alt='Portland Winter 2016' src='files/uploads/fingers-crossed.svg' data-src='https://d1snbyjv506jvs.cloudfront.net/portland-winter-2016/IMG_6176-v2.jpg'></a>
-                <p>Oneonta Trail to Triple Falls.</p> 
+                <p class="custom-caption">Oneonta Trail to Triple Falls.</p> 
               </div> 
             </div> 
           </div> 
