--- a/travel/santa-fe.html
+++ b/travel/santa-fe.html
@@ -56,7 +56,7 @@
               <div class='wolf-media portfolio-media'> 
                 <a class='img-hover' data-rel='lightcase:myCollection' href='https://d1snbyjv506jvs.cloudfront.net/santa-fe/IMG_5470-v2.jpg' title='Meow Wolf, a funhouse interactive art installation and cosmic journey into another dimension.'> 
                 <img alt='Santa Fe' src='files/uploads/fingers-crossed.svg' data-src='https://d1snbyjv506jvs.cloudfront.net/santa-fe/IMG_5470-v2.jpg'></a> 
-                <p>Meow Wolf, a funhouse interactive art installation and cosmic journey into another dimension.</p>
+                <p class="custom-caption">Meow Wolf, a funhouse interactive art installation and cosmic journey into another dimension.</p>
               </div> 
             </div> 
           </div> 
@@ -336,7 +336,7 @@
               <div class='wolf-media portfolio-media'> 
                 <a class='img-hover' data-rel='lightcase:myCollection' href='https://d1snbyjv506jvs.cloudfront.net/santa-fe/IMG_5591-v2.jpg' title="Check out this art. It's a 9mm squared block of wood, on the floor in the middle of it's own room."> 
                 <img alt='Santa Fe' src='files/uploads/fingers-crossed.svg' data-src='https://d1snbyjv506jvs.cloudfront.net/santa-fe/IMG_5591-v2.jpg'></a> 
-                <p>Check out this art. It's a 9mm squared block of wood, on the floor in the middle of it's own room.</p>
+                <p class="custom-caption">Check out this art. It's a 9mm squared block of wood, on the floor in the middle of it's own room.</p>
               </div> 
             </div> 
           </div> 
@@ -445,7 +445,7 @@
               <div class='wolf-media portfolio-media'> 
                 <a class='img-hover' data-rel='lightcase:myCollection' href='https://d1snbyjv506jvs.cloudfront.net/santa-fe/IMG_5617-v2.jpg' title='I stepped on a cactus in Santa Fe.'> 
                 <img alt='Santa Fe' src='files/uploads/fingers-crossed.svg' data-src='https://d1snbyjv506jvs.cloudfront.net/santa-fe/IMG_5617-v2.jpg'></a> 
-                <p>I stepped on a cactus in Santa Fe.</p>
+                <p class="custom-caption">I stepped on a cactus in Santa Fe.</p>
               </div> 
             </div> 
           </div> 
@@ -518,7 +518,7 @@
               <div class='wolf-media portfolio-media'> 
                 <a class='img-hover' data-rel='lightcase:myCollection' href='https://d1snbyjv506jvs.cloudfront.net/santa-fe/sketch-3-small.png' title='My sketches'> 
                 <img alt='Santa Fe' src='files/uploads/fingers-crossed.svg' data-src='https://d1snbyjv506jvs.cloudfront.net/santa-fe/sketch-3-small.png'></a>
-                <p>My sketches</p>
+                <p class="custom-caption">My sketches</p>
               </div> 
             </div> 
           </div> 
